--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@ var _hmt = _hmt || [];
         <li><strong>IEEE Transactions on Industrial Informatics (TII)</strong></li>
 	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA)</strong></li>
 	<li><strong>Information Fusion (INF)</strong></li>
-	 <li><strong>Artificial Intelligence Review</strong></li>
+	<li><strong>Artificial Intelligence Review</strong></li>
+	<li><strong>IEEE/CAA Journal of Automatica Sinica</strong></li>
         <li><strong>Information Sciences (INS)</strong></li>
 	<li><strong>Neurocomputing</strong></li>
         <li><strong>Applied Soft Computing</strong></li>
