--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.09.29</span>, one paper is accepted by <strong><i>NeurIPS'21</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.12.01</span>, one paper is accepted by <strong><i>AAAI'22</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.09.29</span>, one paper is accepted by <strong><i>NeurIPS'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.07.23</span>, one paper is accepted by <strong><i>ICCV'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.05.06</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted by <strong><i>IJCAI'21</i></strong>.</li>
@@ -131,6 +132,19 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 <tbody>
 <h3 style="color: red">Conference Papers </h3>
+
+<tr>
+	
+		<td width="206">
+		<img src="img/AAAI-22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a><strong>[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
+		 <p ><strong>Shiming Chen*</strong>, Ziming Hong*, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
+       <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022. <strong>(CCF-A)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
 	
 <tr>
 	
