--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/AAAI-22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a><strong>[<a href="https://github.com/shiming-chen/shiming-chen.github.io/blob/master/paper/AAAI22-TransZero.pdf">PDF</a><strong>[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
+		<td> <a href="" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a><strong>[<a href="paper/AAAI22-TransZero.pdf">PDF</a><strong>[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen*</strong>, Ziming Hong*, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
        <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022. <strong>(CCF-A)</strong> </i></p>
 		</td>
