--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/AAAI-22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a><strong>[<a href="paper/AAAI22-TransZero.pdf">PDF</a></strong><strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
+		<td> <a href="" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a><strong>[<a href="paper/AAAI22-TransZero.pdf">PDF</a>]</strong><strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen*</strong>, Ziming Hong*, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
        <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022. <strong>(CCF-A)</strong> </i></p>
 		</td>
@@ -152,7 +152,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/motivation-new.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a><strong>[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
+		<td> <a href="" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a><strong>[<a href="https://proceedings.neurips.cc/paper/2021/file/8b0d268963dd0cfb808aac48a549829f-Paper.pdf">PDF</a>]</strong><strong>[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
        <p style="margin-top: -11px"><i>Advances in Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
