--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ var _hmt = _hmt || [];
 <div style="margin-top: 10px"></div>
     <h2>Publications </h2>
 <!--<p><a href="http://scholar.google.com/citations?user=PeMuphgAAAAJ">My Google Scholar</a></p>-->
-<table id="tbPublications" width="100%">
+<!--<table id="tbPublications" width="100%">
 	<tbody>
 <h3 style="color: red">Preprints</h3>
 		
@@ -128,7 +128,7 @@ var _hmt = _hmt || [];
     <tr></tr>
     <tr></tr>
  </tbody>
-</table>
+</table>-->
 	      
 <table id="tbPublications" width="100%">
 <tbody>
