--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -46,7 +46,7 @@
      <p style='text-align: center;'> 
        <span style="font-size: 18px"><a class='urllink' href='https://shiming-chen.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Shiming Chen</strong></font></a><sup>1</sup>,
         <a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Ziming Hong</strong></font></a><sup>1</sup>,
-        <a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Guo-Sen Xie</strong></font></a><sup>2</sup>,
+        <a class='urllink' href='https://scholar.google.com/citations?user=LKaWa9gAAAAJ' title='' rel='nofollow'><font color="#0000FF"><strong>Guo-Sen Xie</strong></font></a><sup>2</sup>,
 		<a class='urllink' href='https://zhaoj9014.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Jian Zhao</strong></font></a><sup>3</sup>,
 	<a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>,
         <a class='urllink' href='https://yanshuicheng.ai/' title='' rel='nofollow'><font color="#0000FF"><strong>Shuicheng Yan</strong></font></a><sup>4</sup>,
