--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@ var _hmt = _hmt || [];
 		<td> <a href="" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a><strong>[<a href="paper/AAAI22-TransZero.pdf">PDF</a>]</strong><strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen*</strong>, Ziming Hong*, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
        <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022. <strong>(CCF-A)</strong> </i></p>
+		<h2>- Social Media Channels:&nbsp &nbsp<a class=urllink title="" href="https://wx.zsxq.com/mweb/views/topicdetail/topicdetail.html?topic_id=818812888124552&group_id=142181451122&inviter_id=28514284588581" rel=nofollow>
+			<img class="img-thumbnail" src="figures/CVer.jpg" width="120cm" height="50cm"></a> <a class=urllink title="" href="https://zhuanlan.zhihu.com/p/442437808" rel=nofollow><img class="img-thumbnail" src="figures/zhihu.jpg" width="120cm" height="50cm"></a><h2>
 		</td>
 	</tr>
 	<tr></tr>
