--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ var _hmt = _hmt || [];
     <h2>Publications </h2>
 <!--<p><a href="http://scholar.google.com/citations?user=PeMuphgAAAAJ">My Google Scholar</a></p>-->
 	 
-<table id="tbPublications" width="100%">
+<!--<table id="tbPublications" width="100%">
 	<tbody>
 <h3 style="color: red">Preprints</h3>
 		
@@ -146,7 +146,7 @@ var _hmt = _hmt || [];
     <tr></tr>
     <tr></tr>
  </tbody>
-</table>
+</table>-->
 	      
 <table id="tbPublications" width="100%">
 <tbody>
