--- a/index.html
+++ b/index.html
@@ -281,22 +281,47 @@ var _hmt = _hmt || [];
 	</li>
 	
 	</ul>  
-
+	 
+	 
       <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
-	<li><strong>IEEE  Transactions on Image Processing (TIP)</strong></li>
-	<li><strong>IEEE Transactions on Neural Networks and Learning Systems (TNNLS)</strong></li>
-        <li><strong>IEEE Transactions on Industrial Informatics (TII)</strong></li>
-	<li><strong>IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA)</strong></li>
-	<li><strong>Information Fusion (INF)</strong></li>
-	<li><strong>Artificial Intelligence Review</strong></li>
-	<li><strong>IEEE/CAA Journal of Automatica Sinica</strong></li>
-        <li><strong>Information Sciences (INS)</strong></li>
-	<li><strong>Neurocomputing</strong></li>
-        <li><strong>Applied Soft Computing</strong></li>
-	<li><strong>Computer Communications</strong></li>
-	<li><strong>Journal of Visual Communication and Image Representation</strong></li>
+	<strong>Journal Reviewers:</strong> IEEE  Transactions on Image Processing (TIP), 
+	   IEEE Transactions on Neural Networks and Learning Systems (TNNLS),
+	   IEEE Transactions on Industrial Informatics (TII), 
+	   IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA), 
+	   Information Fusion (INF), Artificial Intelligence Review, 
+	   IEEE/CAA Journal of Automatica Sinica, 
+           Information Sciences (INS),
+	   Neurocomputing,
+           Applied Soft Computing,
+	   Computer Communications,Journal of Visual Communication and Image Representation, etc.
+	 <strong>External Conference Reviewers:</strong> IJCAI'21, ACM MM'21, ICCV'21, AAAI'22, CVPR'22.
     </div>
+	 
+      <h2>Talks</h2>
+	<ul>
+        <li>
+		<div style="float:left; text-align:left">CVTE</div> <div style="float:right; text-align:right">Dec. 2021</div><br>
+		Title: The Overview of Zero-Shot Learning<br>
+	</li>
+	<li>
+		<div style="float:left; text-align:left">Tencent AI Lab </div> <div style="float:right; text-align:right">Dec. 2021</div><br>
+		Title: The Frontiers in Zero-Shot Learning<br>
+	</li>
+		
+	<li>
+		<div style="float:left; text-align:left">Oppo</div> <div style="float:right; text-align:right">Nov. 2021</div><br>
+		Title: My Works in Zero-Shot Learning<br>
+	</li>
+		
+	<li>
+		<div style="float:left; text-align:left">Alibaba DAMO Academic </div> <div style="float:right; text-align:right">Aug. 2021</div><br>
+		Title: 	HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning<br>
+	</li>
+	
+	</ul> 
+
+     
 	
    
 	  
