--- a/index.html
+++ b/index.html
@@ -294,7 +294,8 @@ var _hmt = _hmt || [];
            Information Sciences (INS),
 	   Neurocomputing,
            Applied Soft Computing,
-	   Computer Communications,Journal of Visual Communication and Image Representation, etc.
+	   Computer Communications,Journal of Visual Communication and Image Representation, etc.<br>
+	   
 	 <strong>External Conference Reviewers:</strong> IJCAI'21, ACM MM'21, ICCV'21, AAAI'22, CVPR'22.
     </div>
 	 
